Add run config for running with LETHE